--- a/css/default.css
+++ b/css/default.css
@@ -134,14 +134,14 @@ nav .navbar-toggler:d{
     -moz-box-shadow: -1px 1px 3px -1px rgb(0,0,0,0.75);
     box-shadow: -1px 1px 3px -1px rgb(0,0,0,0.75);
 }
-/* .project_card{
+.project_card{
     background-color: var(--secondaryColor);
     border: 1px solid var(--borderColor);
     border-radius: 5px 5px 0 0;
     -webkit-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
     -moz-box-shadow: -1px 1px 3px -1px rgb(0,0,0,0.75);
     box-shadow: -1px 1px 3px -1px rgb(0,0,0,0.75);
-} */
+} 
 .tag{
     display: inline-block;
     color:#fff;
